--- a/package.json
+++ b/package.json
@@ -7,27 +7,41 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "postinstall": "prisma generate && prisma migrate deploy",
+    "db:push": "prisma db push",
+    "db:deploy": "prisma migrate deploy",
     "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
     "@prisma/client": "^6.18.0",
     "dotenv": "^17.2.3",
     "js-cookie": "^3.0.5",
+    "maplibre-gl": "^5.10.0",
     "next": "16.0.0",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "swr": "^2.3.6"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@types/jest": "^30.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.0.0",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
     "prisma": "^6.18.0",
     "tailwindcss": "^4",
-    "typescript": "^5",
-    "ts-node": "^10"
+    "ts-jest": "^29.4.5",
+    "ts-node": "^10",
+    "typescript": "^5"
   }
 }
