--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   "dependencies": {
     "@prisma/client": "^6.18.0",
     "dotenv": "^17.2.3",
+    "framer-motion": "^12.23.24",
     "js-cookie": "^3.0.5",
+    "lucide-react": "^0.552.0",
     "maplibre-gl": "^5.10.0",
     "next": "16.0.0",
     "react": "19.2.0",
