--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
   "dependencies": {
     "@prisma/client": "^6.18.0",
     "dotenv": "^17.2.3",
+    "frame": "^1.0.0-alpha.2",
     "framer-motion": "^12.23.24",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.552.0",
     "maplibre-gl": "^5.10.0",
+    "motion": "^12.23.24",
     "next": "16.0.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-intersection-observer": "^10.0.0",
     "swr": "^2.3.6"
   },
   "devDependencies": {
